--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,10 @@ body{
     margin:0;
     padding:0;
     color:#070707;
-	background-image: url(../images/2.jpg);
-	background-color:#343434;
-	background-repeat: no-repeat;
-	background-position: center center;      
-    background-attachment: fixed; 
+    background: linear-gradient(to top left, purple, rgb(237, 20, 36), rgb(19, 57, 70), #ba6c04);
+    background-attachment: fixed;
     background-size: cover;
+
 
 	}
 #wrap {
@@ -81,6 +79,7 @@ body{
 
 
 #main {
+    min-height: 482px;
     color: #232423;
     margin-top:5px;
     float:right;
@@ -110,7 +109,7 @@ body{
     
 	text-decoration:none;
 	color:#f1f5ef;
-	font-size: 18px;
+	font-size: 19px;
 	height: 40px;
 	padding: 0px 5px;
 	display: block;
@@ -128,41 +127,35 @@ body{
 {
     font-family: AC Line;
     text-align:  center;
-	font-size: 22px;
+	font-size: 24px;
 	margin: 0px;
     padding: 0px;
 	line-height: 35px;
+
 	border:solid 1px   rgba( 234, 234, 234, 0.606 );
 }
 #footer {
-    font-size: 12px;
-    text-align: center;
-    height:25px;
-     position:fixed;
-     bottom:0;
-    width:100%;
+    text-align:  center;
+    position: relative;
+    margin-top: -50px; /* negative value of footer height */
+    height: 50px;
+    clear:both;
     background:rgba(23, 23, 23, 0.55);
     color: rgba(240, 240, 240, 0.94);
     }
 
 
 table {
-    overflow:hidden;
-    color: #181818;
 
+    border-collapse: collapse;
 
 }
 
-th, td {
-    border:1px solid #181818;
-    padding:5px;
-    text-align:center;
-    border-radius:3px;
-}
+table, td, th {
+    padding: 10px;
+    border: 1px solid #727272;
+    text-align: center;
 
-th {
-    padding-top:22px;
-    font-size: 15px;
 
 }
 .delete span
@@ -170,6 +163,7 @@ th {
     display: none;
 }
 .delete{
+    margin-left: 20px;
     height: 15px;
     cursor: hand;
     background-image: url("../images/delete.png");
@@ -293,8 +287,10 @@ input[type=file] {
     margin: 10px;
     padding: 20px;
     font-size: 25px;
+    text-decoration: none;
     border: 2px solid rgba(34, 34, 34, 0.95);
     border-left: 10px solid rgba(34, 34, 34, 0.95);
+    background:inherit;
 }
 
 .href_view:hover{
@@ -308,15 +304,68 @@ cursor: hand;
     float: right;
     width: 700px;
 }
-#small_cart{
-margin: 5px;
+#small_cart {
+    margin: 2px;
     font-size: 12px;
-    font-family: Arial;
-    color: #000000;
+    font-family: arial;
     float: right;
+    border: 1px solid #5a5a5a;
+    padding: 6px;
+    border-radius: 5px;
 }
+
+#small_cart a {
+    text-decoration: none;
+    color: #202020;
+    padding: 35px 2px 5px 2px;
+}
+
 hr{
 
     color: rgba(241, 49, 77, 0.71);
     box-shadow:  1px 2px 6px rgba(241, 49, 77, 0.31);;
+}
+.error{
+    color: red;
+}
+
+#goodsView{
+    font-size: 20px;
+    font-family: corkiregular;
+    cursor: hand;
+}
+.rating{
+    width:170px;
+    height: 25px;
+
+}
+
+.ratBlocks{
+    width:172px;
+    height: 25px;
+    margin-top:-25px;
+    display:none;
+}
+.ratZero{
+    width:170px;
+    background: url(/images/stars.png) repeat-x 0 0;
+    height: 25px;
+
+}
+
+.ratDone{
+    width:47px;
+    background: url(/images/stars.png) repeat-x 0 -50px;
+    height: 25px;
+    margin-top:-25px;
+}
+.ratHover{
+    width:0px;
+    background: url(/images/stars.png) repeat-x 0 -25px;
+    height: 25px;
+    margin-top:-25px;
+}
+.ratStat{
+    font-family: corkiregular;
+    font-size: 21px;
 }
